src/test/ui/if/if-no-match-bindings.stderr
error[E0308]: mismatched types
  --> $DIR/if-no-match-bindings.rs:18:8
   |
LL |     if b_ref() {}
   |        ^^^^^^^
   |        |
   |        expected `bool`, found `&bool`
   |        help: consider dereferencing the borrow: `*b_ref()`

error[E0308]: mismatched types
  --> $DIR/if-no-match-bindings.rs:19:8
   |
LL |     if b_mut_ref() {}
   |        ^^^^^^^^^^^
   |        |
   |        expected `bool`, found `&mut bool`
   |        help: consider dereferencing the borrow: `*b_mut_ref()`

error[E0308]: mismatched types
  --> $DIR/if-no-match-bindings.rs:20:8
   |
LL |     if &true {}
   |        ^^^^^
   |        |
   |        expected `bool`, found `&bool`
   |        help: consider removing the borrow: `true`

error[E0308]: mismatched types
  --> $DIR/if-no-match-bindings.rs:21:8
   |
LL |     if &mut true {}
   |        ^^^^^^^^^
   |        |
   |        expected `bool`, found `&mut bool`
   |        help: consider removing the borrow: `true`

error[E0308]: mismatched types
  --> $DIR/if-no-match-bindings.rs:24:11
   |
LL |     while b_ref() {}
   |           ^^^^^^^
   |           |
   |           expected `bool`, found `&bool`
   |           help: consider dereferencing the borrow: `*b_ref()`

error[E0308]: mismatched types
  --> $DIR/if-no-match-bindings.rs:25:11
   |
LL |     while b_mut_ref() {}
   |           ^^^^^^^^^^^
   |           |
   |           expected `bool`, found `&mut bool`
   |           help: consider dereferencing the borrow: `*b_mut_ref()`

error[E0308]: mismatched types
  --> $DIR/if-no-match-bindings.rs:26:11
   |
LL |     while &true {}
   |           ^^^^^
   |           |
   |           expected `bool`, found `&bool`
   |           help: consider removing the borrow: `true`

error[E0308]: mismatched types
  --> $DIR/if-no-match-bindings.rs:27:11
   |
LL |     while &mut true {}
   |           ^^^^^^^^^
   |           |
   |           expected `bool`, found `&mut bool`
   |           help: consider removing the borrow: `true`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
